# find-your-tribe

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  spec.md
src/backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
src/backend/app/: config.py  main.py
src/backend/app/api/: __init__.py  auth_token.py  burn_ingest.py
src/backend/app/constants/: tags.py
src/backend/app/db/: __init__.py  base.py  engine.py
src/backend/app/graphql/: __init__.py  context.py  helpers.py  schema.py
src/backend/app/models/: __init__.py  (+11 more)
src/backend/find_your_tribe_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/backend/migrations/: env.py
src/backend/tests/: CATALOG.md  __init__.py  conftest.py  test_api_auth_token.py  test_api_token.py  test_auth_e2e.py  test_auth_service.py  test_base.py  test_build_activity_model.py  test_burn_ingest.py  test_burn_service.py  test_config.py  test_conftest_fixtures.py  test_context.py  test_engine.py  test_enums.py  test_feed_event.py  test_feed_event_types.py  test_feed_service.py  test_github_service.py  test_graphql_f3.py  test_health.py  test_health_query.py  test_helpers.py  test_main.py  test_mutations_auth.py  test_mutations_burn.py  test_mutations_feed.py  test_mutations_profile.py  test_mutations_projects.py  test_mutations_tribes.py  test_project.py  test_project_resolution.py  test_project_service.py  test_project_service_f3.py  test_project_types.py  test_queries_new.py  test_schema.py  test_score_service.py  test_seed_build_activities.py  (+19 more)
(+422 files in other folders)
