[project]
name = "find-your-tribe-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]",
    "strawberry-graphql[fastapi]",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pgvector",
    "python-ulid",
    "pydantic-settings",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]
